--- a/src/public/blockinsurance/PolicyHolder_notifications.html
+++ b/src/public/blockinsurance/PolicyHolder_notifications.html
@@ -166,9 +166,9 @@
                                                         <input type="checkbox" class="flat" name="table_records">
                                                     </td>
                                                     <td class=" ">121000040</td>
-                                                    <td class=" ">June 23, 2018 11:47:56 PM </td>
+                                                    <td class=" ">Feb 22, 2017 11:47:56 PM </td>
 
-                                                    <td class=" ">John Blank L</td>
+                                                    <td class=" ">Siddhesh Kandarkar</td>
                                                     <td class=" ">Verification request</td>
                                                     <td class="a-right a-right ">&euro;7.45</td>
                                                     <td class=" last">
