--- a/src/public/blockinsurance/OtherPartyForm.html
+++ b/src/public/blockinsurance/OtherPartyForm.html
@@ -135,7 +135,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <!-- Start - Verification form -->
-                    <form id="Verification_form" data-parsley-validate class="form-horizontal form-label-left" onsubmit="return false;">
+                    <form id="Verification_form" data-parsley-validate class="form-horizontal form-label-left" onsubmit="signAgreement()">
 
                         <!-- Start - Accident details -->
                         <div class="row">
@@ -328,90 +328,4 @@
             <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 
 </body>
-
-<script>
-    $(function() {
-        //Retrieve hash
-        var your_url = 'https://ipfs.io/ipfs/QmbMpz6X8LSgoWXo14QWKWSKjUnYAwRinELPKWZeAkKRbD';
-        var jsonobj;
-        $.ajax({
-            url: your_url,
-            type: 'GET',
-            success: function(res) {
-                console.log(res);
-                jsonobj = jQuery.parseJSON(res);
-                // $('#claim_id').val("A786543");
-                // $('#otherperson_name').val("Siddhesh");
-                // $('#Accident_datetime').val("20-07-2018");
-                // $('#accident_place').val("Munich");
-                // $('#accident_country').val("Germany");
-                // $('#reporting_authority').val("Yes");
-                // $('#accident_injury').val("No");
-                // $('#material_damage').val("Yes");
-                // // $('#vehicle_reg_no').val(jsonobj["table"]);
-                // $('#policy_holder_remarks').val("The other party hit my car.");
-                // $('#responsible_party').val("Other Party");
-                $('#claim_id').val("121000040");
-                $('#otherperson_name').val(jsonobj["Policy holder name"]);
-                $('#Accident_datetime').val("22-02-2017");
-                $('#accident_place').val(jsonobj["Accident place"]);
-                $('#accident_country').val(jsonobj["Accident country"]);
-                $('#reporting_authority').val(jsonobj["Reporting authority"]);
-                $('#accident_injury').val(jsonobj["Injury"]);
-                $('#material_damage').val(jsonobj["Material damage"]);
-                // $('#vehicle_reg_no').val(jsonobj["table"]);
-                $('#policy_holder_remarks').val(jsonobj["Policy holder remarks"]);
-                $('#responsible_party').val(jsonobj["Responsible party according to you"]);
-
-
-            }
-        });
-
-    });
-</script>
-<script>
-    $("#submit_op").click(function() {
-        event.preventDefault();
-        var jsondata = {};
-
-        // $("input").each(function($i) {
-        //     var name = $(this).attr('name')
-        //     if ($(this).val()) {
-        //         jsondata[name] = $(this).val();
-        //     }
-        //     $("input:radio:checked").each(function($i) {
-        //         var name = $(this).attr('name')
-        //         if ($(this).val()) {
-        //             jsondata[name] = $(this).val();
-        //         }
-        //     });
-
-        //     $("select").each(function($i) {
-        //         var name = $(this).attr('name')
-        //         if ($(this).val()) {
-        //             jsondata[name] = $(this).val();
-        //         }
-        //     });
-
-        // });
-        jsondata["Agreement"] = $("#agreement").val();
-        jsondata["Verification remarks"] = $("#verification_remarks").val();
-        console.log(jsondata);
-
-        // alert(JSON.stringify(jsondata));
-
-        $.post("/saveClaim", {
-                claimObject: jsondata
-            },
-            function(result) {
-                console.log("hash ====> " + result)
-            });
-
-    });
-
-    function saveClaim() {
-        console.log("Reached HEre ")
-    }
-</script>
-
 </html>
