--- a/src/public/blockinsurance/Police_PendingClaims.html
+++ b/src/public/blockinsurance/Police_PendingClaims.html
@@ -204,19 +204,24 @@
         </div>
     </div>
 
-    <!-- jQuery -->
-    <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- FastClick -->
-    <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js"></script>
-    <!-- NProgress -->
-    <script src="/public/blockinsurance/vendors/nprogress/nprogress.js"></script>
-    <!-- iCheck -->
-    <script src="/public/blockinsurance/vendors/iCheck/icheck.min.js"></script>
+            <!-- jQuery -->
+            <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js"></script>
+            <!-- Bootstrap -->
+            <script src="/public/blockinsurance/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+            <!-- FastClick -->
+            <script src="/public/blockinsurance/vendors/fastclick/lib/fastclick.js"></script>
+            <!-- NProgress -->
+            <script src="/public/blockinsurance/vendors/nprogress/nprogress.js"></script>
+            <!-- iCheck -->
+            <script src="/public/blockinsurance/vendors/iCheck/icheck.min.js"></script>
 
-    <!-- Custom Theme Scripts -->
-    <script src="/public/blockinsurance/js/custom.min.js"></script>
+            <!-- Custom Theme Scripts -->
+            <script src="/public/blockinsurance/js/custom.min.js"></script>
+            <script src="/public/blockinsurance/js/index.js"></script>
+            <script src="public/blockinsurance/js/web3.min.js"></script>
+            <script src="public/blockinsurance/js/truffle-contract.js"></script>
+            <script src="/public/blockinsurance/js/police.js "></script>
+            <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 </body>
 
 </html>
