--- a/src/public/blockinsurance/HospForm.html
+++ b/src/public/blockinsurance/HospForm.html
@@ -104,7 +104,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li class="">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="/public/blockinsurance/images/doctor.jpg" alt="">Hospital officer
+                                    <img src="/public/blockinsurance/images/doctor.jpg" alt="">Dr. Blessy
                                     <span class=" fa fa-angle-down"></span>
                                 </a>
                                 <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -139,7 +139,7 @@
                     <div class="clearfix"></div>
 
                     <!-- Start - Hospital form -->
-                    <form id="Hospital_form" data-parsley-validate class="form-horizontal form-label-left" onsubmit="return false;">
+                    <form id="Hospital_form" data-parsley-validate class="form-horizontal form-label-left" onsubmit="submitHospitalBill()">
                         <!-- Start Hospital details -->
                         <div class="row">
                             <div class="col-md-12 col-sm-12 col-xs-12">
@@ -165,7 +165,7 @@
                                         <div class="form-group ">
                                             <label class="control-label col-md-3 col-sm-3 col-xs-12 " for="doctor_name">Doctor name<span class="required ">*</span></label>
                                             <div class="col-md-6 col-sm-6 col-xs-12 ">
-                                                <input id="doctor_name" name="Doctor name" class=" form-control col-md-7 col-xs-12 " required="required " type="Email ">
+                                                <input id="doctor_name" name="Doctor name" class=" form-control col-md-7 col-xs-12 " value="Dr. Blessy" required="required " type="Email ">
 
                                             </div>
                                         </div>
@@ -254,6 +254,7 @@
                         <div class="form-group ">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3 ">
                                 <!-- <button class="btn btn-primary " type="button ">Cancel</button> -->
+                                <button type="button" class="btn btn-primary" id="modal_hospital" data-toggle="modal" data-target=".bs-example-modal-lg" style="display:none">Large modal</button>
                                 <button class="btn btn-primary " type="reset ">Reset</button>
                                 <button type="submit" class="btn btn-success " id="submit">Submit</button>
                             </div>
@@ -266,6 +267,34 @@
                     <!-- Required attr removed for testing purpose. To be added later -->
                 </div>
             </div>
+
+
+            <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+    
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+                  </button>
+                                <h4 class="modal-title" id="myModalLabel">Hospital Bill Added</h4>
+                            </div>
+                            <div class="modal-body">
+                                <h4>You have successfully added the Hospital Bill to the Claim</h4>
+                                <div id="successPara">
+                                    <p>After this, the claim is sent to the Insurance company. This part would be handled by the other team.</a>
+                                    <p>To check how the Insurance Company will see the final Data Click here</a>
+                                    <a href="#" id="insuraceCompanyLink">Click Here</a>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">
+                                            <a href="">submit</a></button>
+                            </div>
+    
+                        </div>
+                    </div>
+                </div>
 
             <!-- jQuery -->
             <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js "></script>
@@ -302,59 +331,63 @@
             <script src="/public/blockinsurance/vendors/starrr/dist/starrr.js "></script>
             <!-- Custom Theme Scripts -->
             <script src="/public/blockinsurance/js/custom.min.js "></script>
+            <script src="public/blockinsurance/js/web3.min.js"></script>
+            <script src="public/blockinsurance/js/truffle-contract.js"></script>
+            <script src="/public/blockinsurance/js/hospital.js "></script>
+            <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 
 </body>
 <script>
-    $("#submit").click(function() {
-        event.preventDefault();
-        var jsondata = {};
-        var hospital_bills;
+    // $("#submit").click(function() {
+    //     event.preventDefault();
+    //     var jsondata = {};
+    //     var hospital_bills;
 
-        var file = document.getElementById('hospital_bills').files[0];
-        if (file) {
-            // create reader
-            var reader = new FileReader();
-            reader.readAsText(file);
-            reader.onload = function(e) {
-                police_report = e.target.result;
-            };
-        }
-        $("input").each(function($i) {
-            var name = $(this).attr('name')
-            if ($(this).val()) {
-                jsondata[name] = $(this).val();
-            }
-            $("input:radio:checked").each(function($i) {
-                var name = $(this).attr('name')
-                if ($(this).val()) {
-                    jsondata[name] = $(this).val();
-                }
-            });
+    //     var file = document.getElementById('hospital_bills').files[0];
+    //     if (file) {
+    //         // create reader
+    //         var reader = new FileReader();
+    //         reader.readAsText(file);
+    //         reader.onload = function(e) {
+    //             police_report = e.target.result;
+    //         };
+    //     }
+    //     $("input").each(function($i) {
+    //         var name = $(this).attr('name')
+    //         if ($(this).val()) {
+    //             jsondata[name] = $(this).val();
+    //         }
+    //         $("input:radio:checked").each(function($i) {
+    //             var name = $(this).attr('name')
+    //             if ($(this).val()) {
+    //                 jsondata[name] = $(this).val();
+    //             }
+    //         });
 
-            $("select").each(function($i) {
-                var name = $(this).attr('name')
-                if ($(this).val()) {
-                    jsondata[name] = $(this).val();
-                }
-            });
+    //         $("select").each(function($i) {
+    //             var name = $(this).attr('name')
+    //             if ($(this).val()) {
+    //                 jsondata[name] = $(this).val();
+    //             }
+    //         });
 
-        });
-        console.log(jsondata);
-        console.log(hospital_bills);
-        alert(JSON.stringify(jsondata));
+    //     });
+    //     console.log(jsondata);
+    //     console.log(hospital_bills);
+    //     alert(JSON.stringify(jsondata));
 
-        $.post("/saveClaim", {
-                claimObject: jsondata
-            },
-            function(result) {
-                console.log("hash ====> " + result)
-            });
+    //     $.post("/saveClaim", {
+    //             claimObject: jsondata
+    //         },
+    //         function(result) {
+    //             console.log("hash ====> " + result)
+    //         });
 
-    });
+    // });
 
-    function saveClaim() {
-        console.log("Reached HEre ")
-    }
+    // function saveClaim() {
+    //     console.log("Reached HEre ")
+    // }
 </script>
 
 </html>
