--- a/src/public/blockinsurance/OtherPartyForm.html
+++ b/src/public/blockinsurance/OtherPartyForm.html
@@ -275,6 +275,7 @@
                         <div class="form-group ">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3 ">
                                 <!-- <button class="btn btn-primary " type="button ">Cancel</button> -->
+                                <button type="button" class="btn btn-primary" id="modal_otherParty" data-toggle="modal" data-target=".bs-example-modal-lg" style="display:none">Large modal</button>
                                 <button class="btn btn-primary " type="reset ">Reset</button>
                                 <button type="submit" class="btn btn-success " id="submit_op">Submit</button>
                             </div>
@@ -285,6 +286,37 @@
                     <!-- Required attr removed for testing purpose. To be added later -->
                 </div>
             </div>
+
+
+
+
+
+            <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+    
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+                  </button>
+                                <h4 class="modal-title" id="myModalLabel">Agreement Signed</h4>
+                            </div>
+                            <div class="modal-body">
+                                <h4>You have successfully Signed the Agreement!!</h4>
+                                <div id="successPara">
+                                    <p>To check how the police will Handle the case Please</a>
+                                    <a href="#" id="policeLink">Click Here</a>
+                                </div>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">
+                                            <a href="">submit</a></button>
+                            </div>
+    
+                        </div>
+                    </div>
+                </div>
+
 
             <!-- jQuery -->
             <script src="/public/blockinsurance/vendors/jquery/dist/jquery.min.js "></script>
