--- a/src/public/blockinsurance/HospForm.html
+++ b/src/public/blockinsurance/HospForm.html
@@ -332,6 +332,7 @@
             <script src="/public/blockinsurance/js/custom.min.js "></script>
             <script src="public/blockinsurance/js/web3.min.js"></script>
             <script src="public/blockinsurance/js/truffle-contract.js"></script>
+            <script src="/public/blockinsurance/js/index.js "></script>
             <script src="/public/blockinsurance/js/hospital.js "></script>
             <script src="public/blockinsurance/js/contract.js" type="text/javascript" ></script>
 
